--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Sayan's Blog
 author:
   name: Sayan Goswami
-description: An outlet to my various musings.
+description: For the neurons, by the neurons, of the neurons.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
