--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: Sayan's Blog
 author:
   name: Sayan Goswami
-description: For the neurons, by the neurons, of the neurons.
+description: >-
+  Dotting the I's in A&Idot;. This is my blog focussing on machine learning,
+  computer science and other topics that catch my fancy.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
