--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ description: >-
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
+google_analytics: G-50DY9D502Q
+
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
