--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Sayan's Blog
 author:
   name: Sayan Goswami
 description: >-
-  Dotting the I's in A&Idot;. This is my blog focussing on machine learning,
+  My writing focusses on machine learning,
   computer science and other topics that catch my fancy.
 
 show_excerpts: false # set to true to show excerpts on the homepage
