--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ google_analytics: G-50DY9D502Q
 
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
+theme: minima
 minima:
   date_format: "%b %-d, %Y"
 
